--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "mocha"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
+    "dotenv": "^4.0.0",
     "express": "^4.12.4",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0"
